WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155044
REGRESSION(
r197380
): Build fails with new GCC and Clang
https://bugs.webkit.org/show_bug.cgi?id=155044
Summary
REGRESSION(r197380): Build fails with new GCC and Clang
Joanmarie Diggs
Reported
2016-03-04 14:02:43 PST
SSIA. ../../Source/JavaScriptCore/b3/B3LowerMacrosAfterOptimizations.cpp: In member function ‘void JSC::B3::{anonymous}::LowerMacros::processCurrentBlock()’: ../../Source/JavaScriptCore/b3/B3LowerMacrosAfterOptimizations.cpp:96:99: error: no matching function for call to ‘JSC::B3::InsertionSet::insert(unsigned int&, JSC::B3::Origin&, <unresolved overloaded function type>)’ functionAddress = m_insertionSet.insert<ConstPtrValue>(m_index, m_origin, ceil); ^ In file included from ../../Source/JavaScriptCore/b3/B3LowerMacrosAfterOptimizations.cpp:37:0: ../../Source/JavaScriptCore/b3/B3InsertionSetInlines.h:37:12: note: candidate: ValueType* JSC::B3::InsertionSet::insert(size_t, Arguments ...) [with ValueType = JSC::B3::ConstPtrValue; Arguments = {}; size_t = long unsigned int] ValueType* InsertionSet::insert(size_t index, Arguments... arguments) ^~~~~~~~~~~~ ../../Source/JavaScriptCore/b3/B3InsertionSetInlines.h:37:12: note: candidate expects 1 argument, 3 provided ../../Source/JavaScriptCore/b3/B3LowerMacrosAfterOptimizations.cpp:117:100: error: no matching function for call to ‘JSC::B3::InsertionSet::insert(unsigned int&, JSC::B3::Origin&, <unresolved overloaded function type>)’ functionAddress = m_insertionSet.insert<ConstPtrValue>(m_index, m_origin, floor); ^ In file included from ../../Source/JavaScriptCore/b3/B3LowerMacrosAfterOptimizations.cpp:37:0: ../../Source/JavaScriptCore/b3/B3InsertionSetInlines.h:37:12: note: candidate: ValueType* JSC::B3::InsertionSet::insert(size_t, Arguments ...) [with ValueType = JSC::B3::ConstPtrValue; Arguments = {}; size_t = long unsigned int] ValueType* InsertionSet::insert(size_t index, Arguments... arguments) ^~~~~~~~~~~~ ../../Source/JavaScriptCore/b3/B3InsertionSetInlines.h:37:12: note: candidate expects 1 argument, 3 provided [248/5861] Building CXX object Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/b3/B3LowerToAir.cpp.o ninja: build stopped: subcommand failed.
Attachments
Patch
(2.80 KB, patch)
2016-03-17 06:41 PDT
,
Yusuke Suzuki
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2016-03-17 04:52:30 PDT
Just a note here.. I tried to compile it with -O0 and then with -std=gnu++98 -O0 and both failed as well..
Michael Catanzaro
Comment 2
2016-03-17 06:07:05 PDT
***
Bug 155582
has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 3
2016-03-17 06:12:06 PDT
WebKit updates for Fedora are blocked on this. It affects both GCC 6 with libstdc++ (the Fedora configuration) and Clang 3.8 with libc++ (the configuration reported in
bug #155582
).
Yusuke Suzuki
Comment 4
2016-03-17 06:41:10 PDT
Created
attachment 274290
[details]
Patch
Tomas Popela
Comment 5
2016-03-17 06:54:34 PDT
I can confirm that the proposed patch fixes the issue
Yusuke Suzuki
Comment 6
2016-03-17 06:56:51 PDT
Committed
r198331
: <
http://trac.webkit.org/changeset/198331
>
Yusuke Suzuki
Comment 7
2016-03-17 06:57:06 PDT
Thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug