REGRESSION(r197380): Build fails with new GCC and Clang https://bugs.webkit.org/show_bug.cgi?id=155044

Reviewed by Michael Catanzaro.

In C++, std math functions ceil and floor are overloaded for double and float.
Without explicit cast or function pointer assignment, compilers cannot
determine which function address is used in the given context.

* b3/B3LowerMacrosAfterOptimizations.cpp:

Canonical link: https://commits.webkit.org/173700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198331 268f45cc-cd09-0410-ab3c-d52691b4dbfc